--- a/views/proposals_discussion_plugin_tasks/_task_reject_details.html.erb
+++ b/views/proposals_discussion_plugin_tasks/_task_reject_details.html.erb
@@ -1,8 +1,4 @@
-<% if @email_templates.present? %>
-  <div class="template-selection">
-    <%= labelled_form_field(_('Select a rejection email template:'), select_tag("tasks[#{task.id}][task][email_template_id]", options_from_collection_for_select(@email_templates, :id, :name), :include_blank => true, 'data-url' => url_for(:controller => 'email_templates', :action => 'show_parsed'))) %>
-  </div>
-  <% if task.flagged_for_reproval? %>
-    <script>jQuery( document ).ready(function( $ ) { $("#decision-cancel-<%= task.id %>").click(); });</script>
-  <% end %>
+<%= task_email_template(_('Select a rejection email template:'), @rejection_email_templates, task) %>
+<% if task.flagged_for_reproval? %>
+  <script>jQuery( document ).ready(function( $ ) { $("#decision-cancel-<%= task.id %>").click(); });</script>
 <% end %>
