--- a/views/content_viewer/discussion_topics.html.erb
+++ b/views/content_viewer/discussion_topics.html.erb
@@ -7,10 +7,10 @@
 
 <% if discussion.allow_create?(user) %>
 <div class="actions">
-  <%= link_to({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Topic", :parent_id => discussion.id}, :class => 'button with-text icon-add') do %>
+  <%= link_to({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Topic", :parent_id => discussion.id, :profile => profile.identifier}, :class => 'button with-text icon-add') do %>
     <strong><%= _("New Topic") %></strong>
   <% end %>
-  <%= link_to({:controller => :proposals_discussion_plugin_profile, :action => :export, :format => :csv, :article_id => discussion.id}, :class => 'button with-text icon-spread') do %>
+  <%= link_to({:controller => :proposals_discussion_plugin_profile, :action => :export, :format => :csv, :article_id => discussion.id, :profile => profile.identifier}, :class => 'button with-text icon-spread') do %>
     <strong><%= _('Export') %></strong>
   <% end %>
 </div>
