--- a/views/tasks/_task.html.erb
+++ b/views/tasks/_task.html.erb
@@ -1,6 +1,8 @@
 <div class="task_box" id="task-<%= task.id %>">
 
-  <div class="task-proposal-source"><b><%= _('Source') %>:</b> <%= task.proposal_source %></div>
+  <% if task.respond_to?(:proposal_source) %>
+    <div class="task-proposal-source"><b><%= _('Source') %>:</b> <%= task.proposal_source %></div>
+  <% end %>
   <%= render :partial => 'task_icon', :locals => {:task => task} %>
 
   <% if !@view_only && profile.organization? && @responsible_candidates.present? %>
