--- a/views/proposals_discussion_plugin_tasks/_task.html.erb
+++ b/views/proposals_discussion_plugin_tasks/_task.html.erb
@@ -105,9 +105,11 @@
 
 </div><!-- class="task_box" -->
 
+<% if task.flagged? %>
 <script>
   jQuery(document).ready(function($) {
-    var flag = '<%= task.flagged_for_approval? ? 'approval' : task.flagged_for_reproval? ? 'reproval' : '' %>';
+    var flag = '<%= task.flagged_for_approval? ? 'approval' : 'reproval' %>';
     toggleEvaluation($('#task-<%= task.id %> div.evaluation_button.' + flag));
   });
 </script>
+<% end %>
