Change reprove label

--- a/views/proposals_discussion_plugin_tasks/_task.html.erb
+++ b/views/proposals_discussion_plugin_tasks/_task.html.erb
@@ -41,7 +41,7 @@
           data-url='<%="/myprofile/#{profile.identifier}/plugin/proposals_discussion/evaluate_tasks/flag_reject_proposal"%>'
           data-task-id="<%= task.id %>" data-flag-action="reprove_proposal">
           <img class="" src="/plugins/proposals_discussion/images/reproval.png">
-          <span>Reprovar</span>
+          <span>Rejeitar</span>
         </div>
       </div>
 
