Limit parent folder

--- a/views/proposals_discussion_plugin_tasks/_task_accept_details.html.erb
+++ b/views/proposals_discussion_plugin_tasks/_task_accept_details.html.erb
@@ -1,6 +1,7 @@
 <% unless @view_only %>
   <%= task_email_template(_('Select an acceptance email template:'), @acceptance_email_templates, task, false) %>
   <%= f.fields_for 'article', OpenStruct.new(task.article) do |a| %>
-    <%= select_profile_folder(_('Select the folder where the article must be published'), "tasks[#{task.id}][task][article_parent_id]", task.target, task.article_parent_id) %>
+    <% parent_filter = task.article_parent.present? && task.article_parent.parent.present? && task.article_parent.parent.kind_of?(ProposalsDiscussionPlugin::Discussion) ? {:parent_id => task.article_parent.parent.id} : {} %>
+    <%= select_profile_folder(_('Select the folder where the article must be published'), "tasks[#{task.id}][task][article_parent_id]", task.target, task.article_parent_id, {}, {}, {:type => ["ProposalsDiscussionPlugin::Topic", "ProposalsDiscussionPlugin::Discussion"]}.merge(parent_filter)) %>
   <% end %>
 <% end %>
