--- a/public/style.css
+++ b/public/style.css
@@ -402,3 +402,7 @@ div.confirm_evaluation_button a.disabled {
   margin-top: 15px;
   margin-left: 10px;
 }
+
+.icon-child-article {
+  background-image: url('/plugins/proposals_discussion/images/reply.png');
+}
