--- a/views/cms/proposals_discussion_plugin/_response.html.erb
+++ b/views/cms/proposals_discussion_plugin/_response.html.erb
@@ -10,14 +10,16 @@
   <div class="title">
     <%= required labelled_form_field _('Title'), limited_text_area(:article, :name, title_limit, 'title_textarea', :rows => 1) %>
   </div>
-
-  <%= select_profile_folder(_('Parent folder:'), 'article[parent_id]', profile, @article.parent_id, {},{},{},:include_articles => true) %>
+  <% if @article.parent_id.nil? %>
+    <%= select_profile_folder(_('Parent folder:'), 'article[parent_id]', profile, @article.parent_id, {},{},{},:include_articles => true) %>
+  <% else %>
+    <%= hidden_field(:article, :parent_id) %>
+  <% end %>
 
   <div class="body">
     <%= labelled_form_field(_('Response'), text_area(:article, :body, :class => 'mceEditor')) %>
   </div>
 
-  <%= hidden_field(:article, :parent_id) %>
 </div>
 
 <script>
