--- a/views/cms/proposals_discussion_plugin/_response.html.erb
+++ b/views/cms/proposals_discussion_plugin/_response.html.erb
@@ -20,6 +20,13 @@
     <%= labelled_form_field(_('Response'), text_area(:article, :body, :class => 'mceEditor')) %>
   </div>
 
+  <div id="response-image-builder">
+    <%= f.fields_for :image_builder, @article.image do |i| %>
+      <%= file_field_or_thumbnail(_('Image:'), @article.image, i)%>
+      <%= _("Max size: %s (.jpg, .gif, .png)")% Image.max_size.to_humanreadable %>
+    <% end %>
+  </div>
+
 </div>
 
 <script>
