--- a/views/cms/proposals_discussion_plugin/_response.html.erb
+++ b/views/cms/proposals_discussion_plugin/_response.html.erb
@@ -20,12 +20,11 @@
     <%= labelled_form_field(_('Response'), text_area(:article, :body, :class => 'mceEditor')) %>
   </div>
 
-  <div id="response-image-builder">
-    <%= f.fields_for :image_builder, @article.image do |i| %>
-      <%= file_field_or_thumbnail(_('Image:'), @article.image, i)%>
-      <%= _("Max size: %s (.jpg, .gif, .png)")% Image.max_size.to_humanreadable %>
+  <% if @article %>
+    <%= fields_for 'article[image_builder]', @article.image do |i| %>
+      <%= file_field_or_thumbnail(_('Image:'), @article.image, i) %>
     <% end %>
-  </div>
+  <% end %>
 
 </div>
 
